[package]
name = "mun_codegen"
description = "LLVM IR code generation for Mun"
keywords = ["game", "hot-reloading", "language", "mun", "scripting"]
categories.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
mun_abi = { version = "0.6.0-dev", path = "../mun_abi" }
anyhow = { workspace = true, features = ["std"] }
apple-codesign = { workspace = true }
array-init = { workspace = true }
by_address = { workspace = true }
bytemuck = { workspace = true }
either = { workspace = true }
mun_db = { version = "0.6.0-dev", path = "../mun_db" }
mun_hir = { version = "0.6.0-dev", path = "../mun_hir" }
mun_hir_input = { version = "0.6.0-dev", path = "../mun_hir_input" }
inkwell = { workspace = true, features = ["llvm14-0", "target-x86", "target-aarch64"] }
itertools = { workspace = true }
mun_codegen_macros = { version = "0.6.0-dev", path = "../mun_codegen_macros" }
mun_target = { version = "0.6.0-dev", path = "../mun_target" }
once_cell = { workspace = true }
lld_rs = { workspace = true }
parking_lot = { workspace = true }
paste = { workspace = true }
mun_paths = { version = "0.6.0-dev", path = "../mun_paths" }
rustc-hash = { workspace = true }
salsa = { workspace = true }
smallvec = { workspace = true, features = ["union"] }
tempfile = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
mun_abi = { path = "../mun_abi", features = ["serde"] }
insta = { workspace = true, features = ["ron"] }
mun_libloader = { path = "../mun_libloader" }
mun_test = { path = "../mun_test" }
mun_runtime = { path = "../mun_runtime" }
