[package]
name = "mun_codegen_macros"
version = "0.6.0-dev"
authors = ["The Mun Team <team@mun-lang.org>"]
edition = "2021"
description = "Macros used by mun code generation"
documentation = "https://docs.mun-lang.org/v0.4"
readme = "README.md"
homepage = "https://mun-lang.org"
repository = "https://github.com/mun-lang/mun"
license = "MIT OR Apache-2.0"
keywords = ["game", "hot-reloading", "language", "mun", "scripting"]
categories = ["Game development", "Mun"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0", default-features = false }
quote = { version = "1.0", default-features = false }
syn = { version = "2.0", default-features = false, features = ["derive", "parsing", "printing", "proc-macro"] }
