[package]
name = "mun_codegen_macros"
description = "Macros used by mun code generation"
keywords = ["game", "hot-reloading", "language", "mun", "scripting"]
categories.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["derive", "parsing", "printing", "proc-macro"] }

[lints]
workspace = true

