[package]
name = "mun_compiler"
version = "0.4.0"
authors = ["The Mun Team <team@mun-lang.org>"]
edition = "2021"
description = "Binary compilation functionality for Mun"
documentation = "https://docs.mun-lang.org/v0.3"
readme = "README.md"
homepage = "https://mun-lang.org"
repository = "https://github.com/mun-lang/mun"
license = "MIT OR Apache-2.0"
keywords = ["game", "hot-reloading", "language", "mun", "scripting"]
categories = ["game-development", "mun"]

[dependencies]
mun_codegen = { version = "0.4.0", path="../mun_codegen" }
mun_syntax = { version = "0.4.0", path="../mun_syntax" }
mun_hir = { version = "0.4.0", path="../mun_hir" }
mun_paths = { version = "0.4.0", path="../mun_paths" }
mun_target = { version = "0.4.0", path="../mun_target" }
mun_project = { version = "0.4.0", path = "../mun_project" }
mun_diagnostics = { version = "0.4.0", path = "../mun_diagnostics" }
annotate-snippets = { version = "0.9.0", default-features = false, features = ["color"] }
anyhow = { version = "1.0.31", default-features = false }
lockfile = { version = "0.4.0", default-features = false }
log = { version = "0.4", default-features = false }
walkdir = { version = "2.3", default-features = false }
yansi-term = { version = "0.1.2", default-features = false }

[dev-dependencies]
insta = { version = "1.12.0", default-features = false }
