[package]
name = "mun_compiler"
version = "0.5.0-dev"
authors = ["The Mun Team <team@mun-lang.org>"]
edition = "2021"
description = "Binary compilation functionality for Mun"
documentation = "https://docs.mun-lang.org/v0.4"
readme = "README.md"
homepage = "https://mun-lang.org"
repository = "https://github.com/mun-lang/mun"
license = "MIT OR Apache-2.0"
keywords = ["game", "hot-reloading", "language", "mun", "scripting"]
categories = ["game-development", "mun"]

[dependencies]
mun_codegen = { version = "0.5.0-dev", path = "../mun_codegen" }
mun_syntax = { version = "0.5.0-dev", path = "../mun_syntax" }
mun_hir = { version = "0.5.0-dev", path = "../mun_hir" }
mun_paths = { version = "0.5.0-dev", path = "../mun_paths" }
mun_target = { version = "0.5.0-dev", path = "../mun_target" }
mun_project = { version = "0.5.0-dev", path = "../mun_project" }
mun_diagnostics = { version = "0.5.0-dev", path = "../mun_diagnostics" }
annotate-snippets = { version = "0.10.0", default-features = false }
anyhow = { version = "1.0.75", default-features = false }
lockfile = { version = "0.4.0", default-features = false }
log = { version = "0.4", default-features = false }
walkdir = { version = "2.4", default-features = false }
yansi-term = { version = "0.1.2", default-features = false }

[dev-dependencies]
insta = { version = "1.34.0", default-features = false }
