[package]
name = "mun_compiler"
description = "Binary compilation functionality for Mun"
keywords = ["game", "hot-reloading", "language", "mun", "scripting"]
categories.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
mun_codegen = { version = "0.6.0-dev", path = "../mun_codegen" }
mun_syntax = { version = "0.6.0-dev", path = "../mun_syntax" }
mun_hir = { version = "0.6.0-dev", path = "../mun_hir" }
mun_paths = { version = "0.6.0-dev", path = "../mun_paths" }
mun_target = { version = "0.6.0-dev", path = "../mun_target" }
mun_project = { version = "0.6.0-dev", path = "../mun_project" }
mun_diagnostics = { version = "0.6.0-dev", path = "../mun_diagnostics" }
annotate-snippets = { workspace = true }
anyhow = { workspace = true }
lockfile = { workspace = true }
log = { workspace = true }
walkdir = { workspace = true }
yansi-term = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
