[package]
name = "mun_compiler_daemon"
version = "0.4.0"
authors = ["The Mun Team <team@mun-lang.org>"]
edition = "2021"
description = "Functionality for continuously monitoring Mun source files for changes and triggering recompilation"
documentation = "https://docs.mun-lang.org/v0.4"
readme = "README.md"
homepage = "https://mun-lang.org"
repository = "https://github.com/mun-lang/mun"
license = "MIT OR Apache-2.0"
keywords = ["game", "hot-reloading", "language", "mun", "scripting"]
categories = ["game-development", "mun"]

[dependencies]
anyhow = { version = "1.0.31", default-features = false }
ctrlc = { version = "3.1", default-features = false }
log = { version = "0.4", default-features = false }
mun_codegen = { version = "0.4.0", path = "../mun_codegen" }
mun_compiler = { version = "0.4.0", path = "../mun_compiler" }
mun_project = { version = "0.4.0", path = "../mun_project" }
mun_hir = { version = "0.4.0", path = "../mun_hir" }
notify = { version = "4.0", default-features = false }
