[package]
name = "mun_compiler_daemon"
description = "Functionality for continuously monitoring Mun source files for changes and triggering recompilation"
keywords = ["game", "hot-reloading", "language", "mun", "scripting"]
categories.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
ctrlc = { workspace = true }
log = { workspace = true }
mun_codegen = { version = "0.6.0-dev", path = "../mun_codegen" }
mun_compiler = { version = "0.6.0-dev", path = "../mun_compiler" }
mun_project = { version = "0.6.0-dev", path = "../mun_project" }
mun_hir = { version = "0.6.0-dev", path = "../mun_hir" }
notify = { version = "4.0", default-features = false }

# Enable std feature for winapi through feature unification to ensure notify uses the correct `c_void` type
[target.'cfg(windows)'.dependencies]
winapi = { workspace = true, features = ["std"] }
