[package]
name = "mun_db"
description = "Salsa database utilities for everything mun related."
version.workspace = true
authors.workspace = true
edition.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true

[lints]
workspace = true
