[package]
name = "mun_diagnostics"
description = "Provides in-depth diagnostic information for compiler errors"
keywords = ["game", "hot-reloading", "language", "mun", "diagnostics"]
categories.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
mun_hir = { version = "0.6.0-dev", path = "../mun_hir" }
mun_syntax = { version = "0.6.0-dev", path = "../mun_syntax" }

[lints]
workspace = true
