[package]
name = "mun_errors"
version = "0.2.0"
authors = ["The Mun Team <team@mun-lang.org>"]
edition = "2018"
homepage = "https://mun-lang.org"
repository = "https://github.com/mun-lang/mun"
license = "MIT OR Apache-2.0"
description = "Error handling functionality for Mun"

[dependencies]
text_unit = { version = "0.1.6", features = ["serde"] }
