[package]
name = "mun_hir"
version = "0.3.0"
authors = ["The Mun Team <team@mun-lang.org>"]
edition = "2021"
description = "Provides high-level intermediate representation of Mun code"
documentation = "https://docs.mun-lang.org/v0.3"
readme = "README.md"
homepage = "https://mun-lang.org"
repository = "https://github.com/mun-lang/mun"
license = "MIT OR Apache-2.0"
keywords = ["game", "hot-reloading", "language", "mun", "scripting"]
categories = ["game-development", "mun"]

[dependencies]
salsa = "0.16.1"
mun_syntax = { version = "=0.3.0", path = "../mun_syntax" }
mun_target = { version = "=0.3.0", path = "../mun_target" }
mun_paths = { version= "=0.4.0-dev", path="../mun_paths" }
rustc-hash = "1.1"
once_cell = "1.4.0"
ena = "0.14"
drop_bomb = "0.1.4"
either = "1.5.3"
itertools = "0.10.0"
smallvec = { version = "1.6.1", features=["union"] }

[dev-dependencies]
insta = "1.12.0"
text_trees = "0.1.2"
parking_lot = "0.12.0"
mun_test = { path = "../mun_test" }
