[package]
name = "mun_hir"
version = "0.6.0-dev"
authors = ["The Mun Team <team@mun-lang.org>"]
edition = "2021"
description = "Provides high-level intermediate representation of Mun code"
documentation = "https://docs.mun-lang.org/v0.4"
readme = "README.md"
homepage = "https://mun-lang.org"
repository = "https://github.com/mun-lang/mun"
license = "MIT OR Apache-2.0"
keywords = ["game", "hot-reloading", "language", "mun", "scripting"]
categories = ["game-development", "mun"]

[dependencies]
mun_syntax = { version = "0.6.0-dev", path = "../mun_syntax" }
mun_target = { version = "0.6.0-dev", path = "../mun_target" }
mun_paths = { version = "0.6.0-dev", path="../mun_paths" }
drop_bomb = { version = "0.1.5", default-features = false }
either = { version = "1.9.0", default-features = false }
ena = { version = "0.14", default-features = false }
itertools = { version = "0.12.0", default-features = false }
once_cell = { version = "1.19.0", default-features = false }
rustc-hash = { version = "1.1", default-features = false }
salsa = { version = "0.16.1", default-features = false }
smallvec = { version = "1.11.2", features = ["union"], default-features = false }

[dev-dependencies]
mun_test = { path = "../mun_test" }
insta = { version = "1.34.0", default-features = false }
parking_lot = { version = "0.12.1", default-features = false }
text_trees = { version = "0.1.2", default-features = false }
