[package]
name = "mun_language_server"
version = "0.1.0"
authors = ["The Mun Team <team@mun-lang.org>"]
edition = "2021"
description = "Provides a language server protocol server for the Mun language"
documentation = "https://docs.mun-lang.org/v0.3"
readme = "README.md"
homepage = "https://mun-lang.org"
repository = "https://github.com/mun-lang/mun"
license = "MIT OR Apache-2.0"
keywords = ["game", "hot-reloading", "language", "mun", "scripting"]
categories = ["game-development", "mun"]

[dependencies]
rustc-hash="1.1.0"
lsp-types = "0.93.0"
lsp-server = "0.6.0"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
anyhow = "1.0"
thiserror = "1.0.19"
salsa = "0.16.1"
hir = { version = "=0.3.0", path="../mun_hir", package="mun_hir" }
threadpool="1.8.1"
vfs = { version = "=0.1.0", path = "../mun_vfs", package="mun_vfs" }
project = { version = "=0.1.0", path = "../mun_project", package="mun_project" }
mun_target = { version = "=0.3.0", path = "../mun_target" }
mun_syntax = { version = "=0.3.0", path = "../mun_syntax" }
mun_diagnostics = { version = "=0.1.0", path = "../mun_diagnostics" }
crossbeam-channel = "0.5.0"
parking_lot = "0.12.0"
paths = { version = "=0.1.0", path="../mun_paths", package="mun_paths"}
ra_ap_text_edit="0.0.136"

[dev-dependencies]
tempdir = "0.3.7"
mun_test = { path = "../mun_test"}
insta = "1.12.0"
itertools = "0.10.0"
