[package]
name = "mun_language_server"
version = "0.4.0-dev"
authors = ["The Mun Team <team@mun-lang.org>"]
edition = "2021"
description = "Provides a language server protocol server for the Mun language"
documentation = "https://docs.mun-lang.org/v0.3"
readme = "README.md"
homepage = "https://mun-lang.org"
repository = "https://github.com/mun-lang/mun"
license = "MIT OR Apache-2.0"
keywords = ["game", "hot-reloading", "language", "mun", "scripting"]
categories = ["game-development", "mun"]

[dependencies]
mun_hir = { version = "=0.4.0-dev", path="../mun_hir" }
mun_vfs = { version = "=0.4.0-dev", path = "../mun_vfs" }
mun_project = { version = "=0.4.0-dev", path = "../mun_project" }
mun_target = { version = "=0.4.0-dev", path = "../mun_target" }
mun_syntax = { version = "=0.4.0-dev", path = "../mun_syntax" }
mun_diagnostics = { version = "=0.4.0-dev", path = "../mun_diagnostics" }
mun_paths = { version = "=0.4.0-dev", path="../mun_paths" }
anyhow = { version = "1.0", default-features = false }
crossbeam-channel = { version = "0.5.0", default-features = false }
log = { version = "0.4", default-features = false }
lsp-types = { version = "0.93.0", default-features = false }
lsp-server = { version = "0.6.0", default-features = false }
parking_lot = { version = "0.12.0", default-features = false }
ra_ap_text_edit = { version = "0.0.140", default-features = false }
rustc-hash = { version = "1.1.0", default-features = false }
salsa = { version = "0.16.1", default-features = false }
serde = { version = "1.0", default-features = false }
serde_derive = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false }
thiserror = { version = "1.0.19", default-features = false }
threadpool = { version = "1.8.1", default-features = false }

[dev-dependencies]
mun_test = { path = "../mun_test"}
insta = { version = "1.12.0", default-features = false }
itertools = { version = "0.10.0", default-features = false }
tempdir = { version = "0.3.7", default-features = false }
