[package]
name = "mun_language_server"
description = "Provides a language server protocol server for the Mun language"
keywords = ["game", "hot-reloading", "language", "mun", "scripting"]
categories.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
mun_db = { version = "0.6.0-dev", path="../mun_db" }
mun_hir_input = { version = "0.6.0-dev", path="../mun_hir_input" }
mun_hir = { version = "0.6.0-dev", path="../mun_hir" }
mun_vfs = { version = "0.6.0-dev", path = "../mun_vfs" }
mun_project = { version = "0.6.0-dev", path = "../mun_project" }
mun_target = { version = "0.6.0-dev", path = "../mun_target" }
mun_syntax = { version = "0.6.0-dev", path = "../mun_syntax" }
mun_diagnostics = { version = "0.6.0-dev", path = "../mun_diagnostics" }
mun_paths = { version = "0.6.0-dev", path="../mun_paths" }
anyhow = { workspace = true, features = ["std"] }
crossbeam-channel = { workspace = true }
log = { workspace = true }
lsp-types = { workspace = true }
lsp-server = { workspace = true }
parking_lot = { workspace = true }
ra_ap_text_edit = { workspace = true }
rustc-hash = { workspace = true }
salsa = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
threadpool = { workspace = true }

[dev-dependencies]
mun_test = { path = "../mun_test"}
insta = { workspace = true }
itertools = { workspace = true }
tempdir = { workspace = true }
text_trees = { workspace = true }
