[package]
name = "mun_libloader"
version = "0.5.0-dev"
authors = ["The Mun Team <team@mun-lang.org>"]
edition = "2021"
description = "Functionality for loading Mun libraries"
documentation = "https://docs.mun-lang.org/v0.4"
readme = "README.md"
homepage = "https://mun-lang.org"
repository = "https://github.com/mun-lang/mun"
license = "MIT OR Apache-2.0"
keywords = ["game", "hot-reloading", "language", "mun", "scripting"]
categories = ["game-development", "mun"]

[dependencies]
mun_abi = { version = "0.5.0-dev", path = "../mun_abi" }
anyhow = { version = "1.0", default-features = false, features = ["std"] }
libloading = { version = "0.8.1", default-features = false }
tempfile = { version = "3", default-features = false }
thiserror = { version = "1.0.51", default-features = false }
