[package]
name = "mun_libloader"
description = "Functionality for loading Mun libraries"
keywords = ["game", "hot-reloading", "language", "mun", "scripting"]
categories.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
mun_abi = { version = "0.6.0-dev", path = "../mun_abi" }
anyhow = { workspace = true, features = ["std"] }
libloading = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
