[package]
name = "mun_lld"
version = "100.0.1"
authors = ["The Mun Team <team@mun-lang.org>"]
edition = "2018"
description = "Bindings for LLD used to link Mun binaries"
documentation = "https://docs.mun-lang.org/v0.2"
readme = "README.md"
homepage = "https://mun-lang.org"
repository = "https://github.com/mun-lang/mun"
license = "MIT OR Apache-2.0"
keywords = ["game", "hot-reloading", "language", "mun", "scripting"]
categories = ["game-development", "mun"]

[dependencies]
libc = "0.2.65"

[build-dependencies]
cc = "1.0"
lazy_static = "1.4"
regex = "1.3"
semver = "0.9"
