[package]
name = "mun_mdbook_test_plugin"
version = "0.1.0"
authors = ["The Mun Team <team@mun-lang.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mdbook = "0.4.2"
regex = "1"
mun_test = { path = "../mun_test" }
mun_runtime = { path = "../mun_runtime" }
