[package]
name = "mun_memory"
version = "0.2.0"
authors = ["The Mun Team <team@mun-lang.org>"]
edition = "2021"
description = "Memory management functionality for Mun"
documentation = "https://docs.mun-lang.org/v0.3"
readme = "README.md"
homepage = "https://mun-lang.org"
repository = "https://github.com/mun-lang/mun"
license = "MIT OR Apache-2.0"
keywords = ["game", "hot-reloading", "language", "mun", "scripting"]
categories = ["game-development", "mun"]

[dependencies]
abi = { version = "=0.3.0", path = "../mun_abi", package = "mun_abi" }
capi_utils = { version = "=0.1.0", path = "../mun_capi_utils", package= "mun_capi_utils" }
itertools = { version = "0.10.3", default-features = false }
lazy_static = { version = "1.4.0", default-features = false }
once_cell = { version = "1.4.0", default-features = false }
parking_lot = { version = "0.12.0", default-features = false }
rustc-hash = { version = "1.1", default-features = false, features = ["std"] }
thiserror = { version = "1.0.19", default-features = false }

[dev-dependencies]
capi_utils = { version = "=0.1.0", path = "../mun_capi_utils", package= "mun_capi_utils", features = ["insta"] }
insta = { version = "1.12.0", default-features = false, features = ["ron"] }
paste = { version = "1.0", default-features = false }
