[package]
name = "mun_memory"
description = "Memory management functionality for Mun"
keywords = ["game", "hot-reloading", "language", "mun", "scripting"]
categories.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
mun_abi = { version = "0.6.0-dev", path = "../mun_abi" }
mun_capi_utils = { version = "0.6.0-dev", path = "../mun_capi_utils" }
itertools = { workspace = true }
lazy_static = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
rustc-hash = { workspace = true, features = ["std"] }
thiserror = { workspace = true }

[dev-dependencies]
mun_capi_utils = { version = "0.6.0-dev", path = "../mun_capi_utils", features = ["insta"] }
insta = { workspace = true, features = ["ron"] }
paste = { workspace = true }
