[package]
name = "mun_paths"
version = "0.1.0"
authors = ["The Mun Team <team@mun-lang.org>"]
edition = "2018"
description = "Provides convenience structures for handling relative- and absolute paths"
documentation = "https://docs.mun-lang.org/v0.2"
readme = "README.md"
homepage = "https://mun-lang.org"
repository = "https://github.com/mun-lang/mun"
license = "MIT OR Apache-2.0"

[dependencies]
relative-path = "1.2"
