[package]
name = "mun_paths"
version = "0.4.0"
authors = ["The Mun Team <team@mun-lang.org>"]
edition = "2021"
description = "Provides convenience structures for handling relative- and absolute paths"
documentation = "https://docs.mun-lang.org/v0.4"
readme = "README.md"
homepage = "https://mun-lang.org"
repository = "https://github.com/mun-lang/mun"
license = "MIT OR Apache-2.0"
keywords = ["game", "hot-reloading", "language", "mun", "scripting"]
categories = ["game-development", "mun"]

[dependencies]
relative-path = { version = "1.2", default-features = false }
