[package]
name = "mun_project"
version = "0.1.0"
authors = ["The Mun Team <team@mun-lang.org>"]
edition = "2021"
description = "Provides convenience structures for Mun projects"
documentation = "https://docs.mun-lang.org/v0.3"
readme = "README.md"
homepage = "https://mun-lang.org"
repository = "https://github.com/mun-lang/mun"
license = "MIT OR Apache-2.0"
keywords = ["game", "hot-reloading", "language", "mun", "scripting"]
categories = ["game-development", "mun"]

[dependencies]
rustc-hash = "1.1.0"
serde = "1.0"
serde_derive = "1.0"
toml = "0.5"
semver = { version = "0.10", features = ["serde"] }
anyhow = "1.0"
paths = { version="=0.1.0", path="../mun_paths", package="mun_paths" }
