[package]
name = "mun_project"
version = "0.4.0"
authors = ["The Mun Team <team@mun-lang.org>"]
edition = "2021"
description = "Provides convenience structures for Mun projects"
documentation = "https://docs.mun-lang.org/v0.4"
readme = "README.md"
homepage = "https://mun-lang.org"
repository = "https://github.com/mun-lang/mun"
license = "MIT OR Apache-2.0"
keywords = ["game", "hot-reloading", "language", "mun", "scripting"]
categories = ["game-development", "mun"]

[dependencies]
mun_paths = { version = "0.4.0", path="../mun_paths" }
anyhow = { version = "1.0", default-features = false }
rustc-hash = { version = "1.1.0", default-features = false, features = ["std"] }
semver = { version = "1.0", default-features = false, features = ["serde"] }
serde = { version = "1.0", default-features = false }
serde_derive = { version = "1.0", default-features = false }
toml = { version = "0.5", default-features = false }
