[package]
name = "mun_project"
description = "Provides convenience structures for Mun projects"
keywords = ["game", "hot-reloading", "language", "mun", "scripting"]
categories.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
mun_paths = { version = "0.6.0-dev", path = "../mun_paths" }
anyhow = { workspace = true }
rustc-hash = { workspace = true, features = ["std"] }
semver = { workspace = true, features = ["serde"] }
serde = { workspace = true }
serde_derive = { workspace = true }
toml = { workspace = true, features = ["parse"] }
