[package]
name = "mun_runtime"
version = "0.4.0-dev"
authors = ["The Mun Team <team@mun-lang.org>"]
edition = "2021"
description = "A runtime for hot reloading and invoking Mun from Rust"
documentation = "https://docs.mun-lang.org/v0.3"
readme = "README.md"
homepage = "https://mun-lang.org"
repository = "https://github.com/mun-lang/mun"
license = "MIT OR Apache-2.0"
keywords = ["game", "hot-reloading", "language", "mun", "scripting"]
categories = ["game-development", "mun"]

[dependencies]
mun_abi = { version = "=0.4.0-dev", path = "../mun_abi" }
mun_libloader = { version = "=0.4.0-dev", path = "../mun_libloader" }
mun_capi_utils = { version = "=0.4.0-dev", path = "../mun_capi_utils"}
mun_memory = { version = "=0.4.0-dev", path = "../mun_memory" }
mun_project = { version = "=0.4.0-dev", path = "../mun_project" }
anyhow = { version = "1.0", default-features = false }
itertools = { version = "0.10.3", default-features = false, features = ["use_alloc"] }
log = { version = "0.4", default-features = false }
notify = "5.0.0"
once_cell = { version = "1.4.0", default-features = false }
parking_lot = { version = "0.12.0", default-features = false }
rustc-hash = { version = "1.1", default-features = false }
seq-macro = { version = "0.3.0", default-features = false }

[dev-dependencies]
mun_compiler = { path="../mun_compiler" }
mun_test = { path = "../mun_test" }
criterion = { version = "0.4", default-features = false }
mlua = { package = "mlua", version = "0.8", default-features = false, features = ["vendored", "luajit"] }
tempfile = { version = "3", default-features = false }
termcolor = { version = "1.1", default-features = false }
wasmer = { version = "3.0.0", default-features = false, features = ["sys-default"] }

[[bench]]
name = "benchmarks"
harness = false
