[package]
name = "mun_runtime"
description = "A runtime for hot reloading and invoking Mun from Rust"
keywords = ["game", "hot-reloading", "language", "mun", "scripting"]
categories.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
mun_abi = { version = "0.6.0-dev", path = "../mun_abi" }
mun_libloader = { version = "0.6.0-dev", path = "../mun_libloader" }
mun_capi_utils = { version = "0.6.0-dev", path = "../mun_capi_utils" }
mun_memory = { version = "0.6.0-dev", path = "../mun_memory" }
mun_project = { version = "0.6.0-dev", path = "../mun_project" }
itertools = { workspace = true, features = ["use_alloc"] }
log = { workspace = true }
notify = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
rustc-hash = { workspace = true }
seq-macro = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
mun_compiler = { path = "../mun_compiler" }
mun_test = { path = "../mun_test" }
tempfile = { workspace = true }
termcolor = { workspace = true }

[lints]
workspace = true
