[package]
name = "mun_runtime_capi"
version = "0.3.0"
authors = ["The Mun Team <team@mun-lang.org>"]
edition = "2021"
description = "Provides a C API for the Mun runtime"
documentation = "https://docs.mun-lang.org/v0.3"
readme = "README.md"
homepage = "https://mun-lang.org"
repository = "https://github.com/mun-lang/mun"
license = "MIT OR Apache-2.0"
keywords = ["game", "hot-reloading", "language", "mun", "scripting"]
categories = ["game-development", "mun"]

[lib]
name = "mun_runtime"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.31"
lazy_static = "1.4.0"
abi = { version = "=0.3.0", path = "../mun_abi", package = "mun_abi" }
memory = { version = "=0.2.0", path = "../mun_memory", package = "mun_memory" }
runtime = { version = "=0.3.0", path = "../mun_runtime", package = "mun_runtime" }
parking_lot = "0.11.1"
rand = "0.8.5"

[dev-dependencies]
compiler = { path="../mun_compiler", package = "mun_compiler" }
paste = "1.0"
tempfile = "3"
