[package]
name = "mun_runtime_capi"
version = "0.3.0"
authors = ["The Mun Team <team@mun-lang.org>"]
edition = "2021"
description = "Provides a C API for the Mun runtime"
documentation = "https://docs.mun-lang.org/v0.3"
readme = "README.md"
homepage = "https://mun-lang.org"
repository = "https://github.com/mun-lang/mun"
license = "MIT OR Apache-2.0"
keywords = ["game", "hot-reloading", "language", "mun", "scripting"]
categories = ["game-development", "mun"]

[lib]
name = "mun_runtime"
crate-type = ["cdylib"]

[dependencies]
mun_abi = { version = "=0.3.0", path = "../mun_abi" }
mun_memory = { version = "=0.2.0", path = "../mun_memory" }
mun_runtime = { version = "=0.3.0", path = "../mun_runtime" }
mun_capi_utils = { version = "=0.1.0", path = "../mun_capi_utils", features=["insta"]}
insta = { version = "1.12.0", features=["ron"] }

[dev-dependencies]
mun_compiler = { path="../mun_compiler" }
paste = "1.0"
tempfile = "3"
