[package]
name = "mun_runtime_capi"
description = "Provides a C API for the Mun runtime"
keywords = ["game", "hot-reloading", "language", "mun", "scripting"]
categories.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "mun_runtime"
crate-type = ["cdylib"]

[dependencies]
mun_abi = { version = "0.6.0-dev", path = "../mun_abi" }
mun_memory = { version = "0.6.0-dev", path = "../mun_memory" }
mun_runtime = { version = "0.6.0-dev", path = "../mun_runtime" }
mun_capi_utils = { version = "0.6.0-dev", path = "../mun_capi_utils", features=["insta"]}
insta = { workspace = true, features = ["ron"] }

[dev-dependencies]
mun_compiler = { path="../mun_compiler" }
paste = { workspace = true }
tempfile = { workspace = true }
