[package]
name = "mun_skeptic"
description = "Provides the ability to test Mun code snippets in an mdbook"
keywords = ["game", "hot-reloading", "language", "mun", "mdbook"]
categories.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
bytecount = { workspace = true }
itertools = { workspace = true }
mdbook = { workspace = true }
pulldown-cmark = { workspace = true }
mun_compiler = { version = "0.6.0-dev", path = "../mun_compiler" }
mun_runtime = { version = "0.6.0-dev", path = "../mun_runtime" }
tempdir = { workspace = true }

[lints]
workspace = true
